# matasano_crypto_challenges

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cmake/: FindBOTAN.cmake  FindCRYPTOPP.cmake
src/set1/: CMakeLists.txt
src/set1/challenge1/: CMakeLists.txt  main.cpp
src/set1/challenge2/: CMakeLists.txt  main.cpp
src/set1/challenge3/: CMakeLists.txt  main.cpp
src/set1/challenge4/: CMakeLists.txt  main.cpp
src/set1/challenge5/: CMakeLists.txt  main.cpp
src/set1/challenge6/: CMakeLists.txt  main.cpp
src/set1/challenge7/: CMakeLists.txt  main.cpp
src/set1/challenge8/: CMakeLists.txt  main.cpp
src/set2/: CMakeLists.txt
src/set2/challenge1/: CMakeLists.txt  main.cpp
src/set2/challenge10/: CMakeLists.txt  main.cpp
src/set2/challenge11/: CMakeLists.txt  main.cpp
src/set2/challenge12/: CMakeLists.txt  main.cpp
src/set2/challenge13/: CMakeLists.txt  main.cpp
src/set2/challenge14/: CMakeLists.txt  main.cpp
src/set2/challenge15/: CMakeLists.txt  main.cpp
src/set2/challenge16/: CMakeLists.txt  main.cpp
src/set2/challenge9/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  aes.cpp  aes.h  aes_cbc_manipulator.cpp  aes_cbc_manipulator.h  aes_ecb_oracle.cpp  aes_ecb_oracle.h  asserts.h  byte_data.cpp  byte_data.h  byte_distribution.cpp  byte_distribution.h  crypto_block_aggregator.cpp  crypto_block_aggregator.h  crypto_constants.h  decryptor_xor.cpp  decryptor_xor.h  file_utils.cpp  file_utils.h  general_utils.cpp  general_utils.h  generator.h  matasano_asserts.cpp  matasano_asserts.h  matasano_convert.cpp  matasano_convert.h  matasano_math.cpp  matasano_math.h  padder.cpp  padder.h  utils.cpp  utils.h
src/utils/internal/: matasano_convert.cpp  matasano_convert.h
tests/: CMakeLists.txt  aes_tests.cpp  block_aggregator_tests.cpp  bytedata_tests.cpp  cbc_manipulator_tests.cpp  convert_tests.cpp  decryptor_xor_tests.cpp  distribution_tests.cpp  ecb_oracle_test.cpp  file_utils_tests.cpp  general_utils_tests.cpp  math_tests.cpp  padder_tests.cpp  secure_utils_test.cpp  utils_tests.cpp
tests/internal/: convert_tests.cpp
